crates/swc_ecma_parser/tests/test262-error-references/fail/bb0f3d2d2848abe9.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/bb0f3d2d2848abe9.js:1:10
  |
1 | if(false)
  |          ^

